[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Modelos_escenas/TV_01.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Scripts_disparables/TV_01_disparable.gd" type="Script" id=2]
[ext_resource path="res://Assets/Modelos_escenas/TV_01_Rota.tscn" type="PackedScene" id=3]



[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.19877, 0.982522, 0.787668 )

[node name="TV_01_disparable" type="Spatial"]
transform = Transform( -1, 0, -4.37114e-07, 0, 1, 0, 4.37114e-07, 0, -1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="TV_01" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -4.37115e-07, 0, 1, 0, 4.37115e-07, 0, -1, 0, 0.137226, 0 )

[node name="TV_01_Rota" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0.146407, 0 )
visible = false

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.257198, -0.0372286 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
